# cDOOM

./: .gitignore  CMakeLists.txt  cmake_gen_vs_x86.bat
doomclassic/: CMakeLists.txt  doomclassic.cmake  doomclassic.vcxproj
doomclassic/doom/: tables.cpp
doomclassic/timidity/: timidity.vcxproj
neo/: doom3.sln  doomexe.vcxproj  doomexe.vcxproj.filters  external.vcxproj  game-d3xp.vcxproj  idlib.vcxproj
neo/amplitude/: amplitude.cpp  amplitude.vcxproj
neo/cm/: CollisionModel_contacts.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp
neo/d3xp/: AF.cpp  AFEntity.cpp  Actor.cpp  AimAssist.cpp  BrittleFracture.cpp  Entity.cpp  GameEdit.cpp  Game_local.cpp  Game_network.cpp  Grabber.cpp  IK.cpp  Item.cpp  Misc.cpp  Moveable.cpp  Mover.cpp  MultiplayerGame.cpp  Player.cpp  PlayerView.cpp  Projectile.cpp  SecurityCamera.cpp  SmokeParticles.cpp  Trigger.cpp  Weapon.cpp
neo/d3xp/ai/: AI.cpp  AI_events.cpp
neo/d3xp/anim/: Anim_Blend.cpp  Anim_Testmodel.cpp
neo/d3xp/gamesys/: Event.cpp  SysCmds.cpp
neo/d3xp/menus/: MenuHandler_PDA.cpp  MenuHandler_Scoreboard.cpp  MenuHandler_Shell.cpp  MenuScreen_Shell_Bindings.cpp  MenuScreen_Shell_Leaderboards.cpp  MenuScreen_Shell_Save.cpp  MenuWidget.cpp  MenuWidget_InfoBox.cpp  MenuWidget_List.cpp  MenuWidget_PDA_EmailInbox.cpp
neo/d3xp/physics/: Clip.cpp  Force_Constant.cpp  Force_Drag.cpp  Force_Field.cpp  Force_Field.h  Force_Grab.cpp  Force_Spring.cpp  Physics_AF.cpp  Physics_AF.h  Physics_Monster.cpp  Physics_RigidBody.cpp
neo/d3xp/script/: Script_Compiler.cpp  Script_Program.cpp
neo/framework/: CVarSystem.h  Common.cpp  Common_localize.cpp  Common_network.cpp  Compressor.cpp  Console.cpp  DeclAF.cpp  DeclManager.cpp  DeclParticle.cpp  File.cpp  FileSystem.cpp  UsercmdGen.cpp
neo/framework/zlib/: zutil.h
neo/idlib/: Heap.cpp  Heap.h  Lexer.cpp  Lexer.h  MapFile.cpp  ParallelJobList.cpp  Parser.cpp  Str.cpp  Str.h
neo/idlib/containers/: Queue.h  StrPool.h  VectorSet.h
neo/idlib/geometry/: DrawVert.cpp  DrawVert.h  Surface_Patch.cpp  Surface_SweptSpline.cpp  TraceModel.cpp
neo/idlib/math/: Angles.h  Complex.h  Curve.h  Extrapolate.h  Interpolate.h  Lcp.cpp  MatX.cpp  MatX.h  Math.h  Matrix.cpp  Polynomial.cpp  Quat.h  Random.h  Vector.h
neo/idlib/sys/: sys_defines.h
neo/idlib/sys/win32/: win_thread.cpp
neo/renderer/: BinaryImage.cpp  Image_load.cpp  Image_program.cpp  Model.cpp  ModelManager.cpp  Model_ase.cpp  Model_liquid.cpp  Model_ma.cpp  Model_md5.cpp  RenderProgs_GLSL.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld_demo.cpp  RenderWorld_load.cpp  tr_frontend_addmodels.cpp  tr_frontend_deform.cpp  tr_local.h
neo/renderer/DXT/: DXTCodec.h  DXTDecoder.cpp  DXTEncoder.cpp
neo/sound/: WaveFile.cpp  snd_emitter.cpp
neo/sound/XAudio2/: XA2_SoundHardware.cpp  XA2_SoundSample.cpp
neo/swf/: SWF_Events.cpp  SWF_Image.cpp  SWF_PlaceObject.cpp  SWF_Render.cpp  SWF_ScriptFunction.cpp  SWF_ShapeParser.cpp  SWF_SpriteInstance.cpp  SWF_TextInstance.cpp
neo/sys/: LightweightCompression.cpp  LightweightCompression.h  PacketProcessor.cpp  Snapshot.cpp  Snapshot_Jobs.cpp  sys_dedicated_server_search.cpp  sys_lobby.cpp  sys_lobby_backend.h  sys_lobby_backend_direct.cpp  sys_lobby_snapshot.cpp  sys_lobby_users.cpp  sys_public.h  sys_savegame.cpp  sys_session_local.cpp  sys_signin.h  sys_stats.h  sys_stats_misc.h
neo/sys/win32/: win_input.cpp  win_shared.cpp  win_wndproc.cpp
neo/sys/win32/rc/: doom.rc
neo/ui/: DeviceContext.cpp  EditWindow.cpp  FieldWindow.cpp  GameBustOutWindow.cpp  GameSSDWindow.cpp  GuiScript.cpp  ListGUI.cpp  ListWindow.cpp  Rectangle.h  SimpleWindow.cpp  SliderWindow.cpp  Window.cpp  Winvar.h
